erDiagram
    AUTH_USERS ||--|| PROFILES : "has profile"
    HOUSEHOLDS ||--o{ RESIDENTS : "houses"
    RESIDENTS ||--o{ BENEFICIARIES : "enrolled in"
    ASSISTANCE_PROGRAMS ||--o{ BENEFICIARIES : "grants"
    RESIDENTS ||--o{ QR_VERIFICATIONS : "scanned"
    RESIDENTS ||--o{ SURVEY_RESPONSES : "submits"
    RESIDENTS ||--o{ INCIDENTS : "may be involved in"
    PROFILES ||--o{ INCIDENTS : "logs (officer_id)"
    AUTH_USERS ||--o{ ANNOUNCEMENTS : "posts (posted_by)"
    PROFILES ||--o{ ORDINANCES : "maintains (created_by)"
    AUTH_USERS ||--o{ AUDIT_LOGS : "records (changed_by)"

    AUTH_USERS {
        uuid id PK
        text email
        text encrypted_password
        timestamptz created_at
    }
    PROFILES {
        uuid id PK "= auth.users.id"
        text full_name
        text role "brgy_sec / tanod"
        text barangay
        timestamptz created_at
    }
    HOUSEHOLDS {
        uuid id PK
        text household_no UK "HH-0001"
        text sitio
        text address
        text head_name
        numeric latitude
        numeric longitude
        text housing_type
        timestamptz created_at
        timestamptz updated_at
    }
    RESIDENTS {
        uuid id PK
        text resident_no UK "RES-0001"
        uuid household_id FK
        text first_name
        text last_name
        text middle_name
        date date_of_birth
        int age
        text sex
        text civil_status
        text sitio
        bool is_household_head
        bool is_voter
        bool is_pwd
        text pwd_type
        bool is_solo_parent
        bool is_senior_citizen
        bool is_out_of_school_youth
        numeric monthly_income
        text occupation
        text contact_number
        timestamptz created_at
        timestamptz updated_at
    }
    ASSISTANCE_PROGRAMS {
        uuid id PK
        text name
        text description
        text agency
        bool is_active
        timestamptz created_at
    }
    BENEFICIARIES {
        uuid id PK
        uuid resident_id FK
        uuid program_id FK
        text status
        date enrolled_at
        date last_release_date
        numeric total_released
        text notes
        timestamptz created_at
        timestamptz updated_at
    }
    INCIDENTS {
        uuid id PK
        text case_no UK
        text incident_type
        text sitio
        text complainant
        text description
        text respondent
        timestamptz incident_date
        text status
        date resolved_date
        uuid officer_id FK
        numeric latitude
        numeric longitude
        text photo_url
        timestamptz created_at
        timestamptz updated_at
    }
    QR_VERIFICATIONS {
        uuid id PK
        uuid resident_id FK
        text purpose
        timestamptz verified_at
    }
    SURVEY_RESPONSES {
        uuid id PK
        uuid resident_id FK "nullable"
        text sitio
        text priority_need
        text comments
        text photo_url
        timestamptz submitted_at
    }
    DISASTER_RISK_ZONES {
        uuid id PK
        text hazard_type
        text risk_level
        text sitio
        text description
        numeric radius
        numeric latitude
        numeric longitude
        timestamptz created_at
    }
    ANNOUNCEMENTS {
        uuid id PK
        text title
        text body
        text category
        text image_url
        uuid posted_by FK
        bool is_active
        timestamptz created_at
    }
    ORDINANCES {
        uuid id PK
        text ordinance_no UK
        text title
        text category
        date date_enacted
        text summary
        text sponsor
        bool is_active
        text file_url
        uuid created_by FK
    }
    POPULATION_HISTORY {
        uuid id PK
        int year UK
        int total_population
        timestamptz created_at
    }
    AUDIT_LOGS {
        uuid id PK
        text table_name
        text action
        uuid record_id
        jsonb old_data
        jsonb new_data
        uuid changed_by FK
        timestamptz changed_at
    }

    STORAGE_BUCKETS {
        text name PK "incident-photos, announcement-photos, needs-photos, ordinance-pdfs, system-backups"
        text access "private/public by policy"
    }

    BACKUP_EXPORTS {
        text function_name PK "backup-export"
        text schedule "protect-weekly-backup"
        text format "JSON"
    }
